@@ -120,6 +120,9 @@ public:
 	// this data among restarts.
 	double starting_time; // Some videos don't start at 0
 
+	//! The codec of the video is ffh264 and it's high definition
+	bool is264andHD;
+
 	// Advanced settings
 	QString forced_demuxer;
 	QString forced_video_codec;
