@@ -160,18 +160,30 @@
            <number>6</number>
           </property>
           <item>
-           <widget class="QCheckBox" name="skip_loop_filter_check" >
+           <widget class="QLabel" name="label_8" >
             <property name="text" >
-             <string>S&amp;kip loop filter</string>
+             <string>Loop &amp;filter</string>
+            </property>
+            <property name="buddy" >
+             <cstring>loopfilter_combo</cstring>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QCheckBox" name="skip_frames_check" >
-            <property name="text" >
-             <string>Sk&amp;ip frames</string>
+           <widget class="QComboBox" name="loopfilter_combo" />
+          </item>
+          <item>
+           <spacer>
+            <property name="orientation" >
+             <enum>Qt::Horizontal</enum>
             </property>
-           </widget>
+            <property name="sizeHint" >
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
           </item>
          </layout>
         </widget>
